# token-minter

./: .gitignore  COPYRIGHT  LICENSE  README.md  aptos.nix  shell.nix
.github/: CODEOWNERS
.github/workflows/: devnet_autodeploy.yml  move_tests.yml
airdrop-machine/: Move.toml  shell.nix
airdrop-machine/sources/: airdrop_machine.move
airdrop-machine/tests/: airdrop_machine_tests.move
bulk-mint/: Cargo.toml
bulk-mint/.cargo/: config.toml
bulk-mint/src/: its_aptos_thing.rs  main.rs
example-composable/: Move.toml
example-composable/sources/: main.move
example-loyalty/: Move.toml
example-loyalty/sources/: run_tracker.move
example-ownership/: Move.toml
example-ownership/sources/: part1.move  part2.move
example-permit/: Move.toml  README.md  index.js  package-lock.json  package.json  shell.nix
example-permit/sources/: main.move
ez-launch/: .env.example  Move.toml  package.json  pnpm-lock.yaml  shell.nix  tsconfig.json
ez-launch/jill-test/: config.json
ez-launch/move/: Move.toml
ez-launch/sources/: ez_launch.move  ez_launch_with_stages.move
ez-launch/src/: app.ts
ez-launch/tests/: ez_coin_utils.move  ez_launch_tests.move  ez_launch_with_stages_tests.move
launchpad/: Move.toml
launchpad/sources/: launchpad.move
launchpad/tests/: launchpad_tests.move
migration/: Move.toml
migration/sources/: migration.move
migration/tests/: collection_migration_tests.move  token_migration_tests.move
only-on-aptos/: Move.toml
sources/: token_minter.move
tests/: token_minter_apt_payment_guard_tests.move  token_minter_tests.move  token_minter_whitelist_guard_tests.move
token-minter/: Move.toml  shell.nix
token-minter-old/: Move.toml
(+75 files in other folders)
